fix ui on mobile devices

--- a/custom.css
+++ b/custom.css
@@ -3,7 +3,7 @@
 }
 
 .container, .no-left-margin{
-	margin-left: 0px;
+	margin-left: -15px;
 }
 
 .info{
@@ -32,6 +32,7 @@
 .bio{
 	padding-left: 30px;
 	margin-bottom: 20px;
+	text-align: center;
 }
 
 .subProject{
@@ -59,4 +60,14 @@ iframe {
 	  width: 420px;
 	  height: 315px;
   }
+}
+
+@media only screen and (min-width: 768px) {
+	.container, .no-left-margin {
+		margin-left: 0px;
+	}
+
+	.bio {
+		text-align: left;
+	}
 }
